# TaskCraft

./: .env.dev  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  deploy.sh  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  pytest.ini
.github/: dependabot.yml
.github/workflows/: tests.yml
app/: config.py  database.py  main.py
app/routers/: settings.py
app/services/: event_extractor.py  openrouter_client.py
config/: nginx.conf
frontend/: index.html  package-lock.json  package.json
frontend/css/: common.css  themes.css  utilities.css
frontend/css/components/: badges.css  buttons.css  cards.css  forms.css  modals.css  other.css  toast.css
frontend/css/pages/: auth.css  dashboard.css  help-about.css  history.css
frontend/js/: api.js  app.js  auth.js  router.js
frontend/js/components/: form-validator.js  legal-modals.js  modal.js  multi-select.js  pagination.js  settings-modal.js  theme-dropdown.js  theme-picker.js
frontend/js/fixtures/: history-data.js  mock-auth.js
frontend/js/pages/: history.js  login.js
frontend/js/utils/: dom.js  storage.js  theme.js
frontend/pages/: about.html  dashboard.html  help.html  history.html  login.html
frontend/src/: App.tsx  index.css
frontend/src/components/: Layout.tsx  Modal.tsx  PrivacyPolicyModal.tsx  SettingsModal.tsx  TermsOfServiceModal.tsx  ThemeDropdown.tsx  Toast.tsx
frontend/src/lib/: api.ts  auth.ts  theme.ts
scripts/: setup_nginx.sh  setup_server.sh  setup_ssl.sh
tests/: conftest.py
tests/integration/: test_api_flow.py
tests/unit/: test_health.py  test_items.py
(+6 files in other folders)
